--- a/app/one-community.html
+++ b/app/one-community.html
@@ -45,6 +45,7 @@
                     <span class="subhead">요셉회</span>
                     <p>헌법개정안이 제2항의 찬성을 얻은 때에는 헌법개정은 확정되며, 대통령은 즉시 이를 공포하여야 한다. 대통령은 국가의 독립·영토의 보전·국가의 계속성과 헌법을 수호할 책무를 진다.</p>
                     <a class="hero-txt-btn" href="#">자세희 보기 <span class="icon sprite-link-ext-sm"></span></a>
+                    <a class="hero-txt-btn" href="#">더 읽기 <span class="icon sprite-link-sm"></span></a>
                     <ul class="show-desktop">
                         <li class="tall-margin">Meeting Hour: <strong>9AM - 11AM (토)</strong></li>
                         <li>문의: <strong>김 아무개</strong></li>
@@ -121,7 +122,35 @@
                         </div>
                     </div>
                     <aside class="side-body">
-                        <h3>Awesome Aside</h3>
+                        <div class="boxed">
+                            <div class="padder">
+                                <h4>중요 자료들<a class="more-link sprite-link" href="#"></a></h4>
+                                <ul>
+                                    <li>
+                                        <a class="list-item" href="#">
+                                            모든 국민은 언론·출판의 자유와 집회·결사의 자유를 가진다.
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="list-item" href="#">
+                                            모든 국민은 언론·출판의 자유와 집회·결사의 자유를 가진다.
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="list-item" href="#">
+                                            모든 국민은 언론·출판의 자유와 집회·결사의 자유를 가진다.
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="list-item" href="#">
+                                            모든 국민은 언론·출판의 자유와 집회·결사의 자유를 가진다.
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <h3 class="add-paddingTop">Awesome Aside</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
                     </aside>
                 </div>
@@ -188,7 +217,7 @@
 
             <div class="section" name="parish-council">
                 <div class="wrapper">
-                    <div class="main-body">
+                    <div class="main-body no-sidebar">
                         <h3><a href="#">사목회</a></h3>
                         <p>대통령은 제4항과 제5항의 규정에 의하여 확정된 법률을 지체없이 공포하여야 한다. 제5항에 의하여 법률이 확정된 후 또는 제4항에 의한 확정법률이 정부에 이송된 후 5일 이내에 대통령이 공포하지 아니할 때에는 국회의장이 이를 공포한다. 형사피고인은 유죄의 판결이 확정될 때까지는 무죄로 추정된다.</p>
 
@@ -200,10 +229,6 @@
 
                         <p>대통령이 궐위되거나 사고로 인하여 직무를 수행할 수 없을 때에는 국무총리, 법률이 정한 국무위원의 순서로 그 권한을 대행한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다. 대통령은 내우·외환·천재·지변 또는 중대한 재정·경제상의 위기에 있어서 국가의 안전보장 또는 공공의 안녕질서를 유지하기 위하여 긴급한 조치가 필요하고 국회의 집회를 기다릴 여유가 없을 때에 한하여 최소한으로 필요한 재정·경제상의 처분을 하거나 이에 관하여 법률의 효력을 가지는 명령을 발할 수 있다.</p>
                     </div>
-                    <aside class="side-body">
-                        <h3>Awesome Aside</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
-                    </aside>
                 </div>
             </div>
 
