--- a/app/spiritual-life.html
+++ b/app/spiritual-life.html
@@ -149,8 +149,33 @@
                         <p>대통령이 궐위되거나 사고로 인하여 직무를 수행할 수 없을 때에는 국무총리, 법률이 정한 국무위원의 순서로 그 권한을 대행한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다. 대통령은 내우·외환·천재·지변 또는 중대한 재정·경제상의 위기에 있어서 국가의 안전보장 또는 공공의 안녕질서를 유지하기 위하여 긴급한 조치가 필요하고 국회의 집회를 기다릴 여유가 없을 때에 한하여 최소한으로 필요한 재정·경제상의 처분을 하거나 이에 관하여 법률의 효력을 가지는 명령을 발할 수 있다.</p>
                     </div>
                     <aside class="side-body">
-                        <h3>Awesome Aside</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit necessitatibus ipsum, soluta corporis aspernatur natus obcaecati architecto quae eveniet, ipsam repellat omnis autem quidem! Blanditiis aliquid fugit perferendis, sapiente quisquam?</p>
+                        <div class="boxed">
+                            <div class="padder">
+                                <h4>중요 자료들<a class="more-link sprite-link" href="#"></a></h4>
+                                <ul>
+                                    <li>
+                                        <a class="list-item" href="#">
+                                            모든 국민은 언론·출판의 자유와 집회·결사의 자유를 가진다.
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="list-item" href="#">
+                                            모든 국민은 언론·출판의 자유와 집회·결사의 자유를 가진다.
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="list-item" href="#">
+                                            모든 국민은 언론·출판의 자유와 집회·결사의 자유를 가진다.
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="list-item" href="#">
+                                            모든 국민은 언론·출판의 자유와 집회·결사의 자유를 가진다.
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </aside>
                 </div>
             </div>
